my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EVARTYPE/EVARTYPE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EVARTYPE.dml:9:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EVARTYPE.dml:11:5: error EVARTYPE: variable or field declared function() returning void
